gccida/g2/expand_shift
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2369:20: error: must use 'enum' tag to refer to type 'tree_code'
rtx  expand_shift( tree_code code, machine_mode mode, rtx shifted, tree amount, rtx target, int unsignedp) 
                   ^
                   enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2369:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_shift( tree_code code, machine_mode mode, rtx shifted, tree amount, rtx target, int unsignedp) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2378:1: error: must use 'enum' tag to refer to type 'optab_methods'
optab_methods v16; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2388:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2389:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2390:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2391:5: error: expected ';' after expression
tree v29; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2391:6: error: use of undeclared identifier 'v29'
tree v29; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2392:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2393:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2396:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v34; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2402:1: error: must use 'enum' tag to refer to type 'optab_methods'
optab_methods v40; // [rsp+Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2504:1: error: use of undeclared identifier 'v29'
v29 = convert( type, v28); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/expmed.c:2505:32: error: use of undeclared identifier 'v29'
v30 = build( MINUS_EXPR, type, v29, amount); 
                               ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_shift/src/obj/expmed.o] Error 1
